--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "type": "module",
   "scripts": {
-    "format": "prettier . --ignore-unknown --write"
+    "format": "prettier . --ignore-unknown --write",
+    "test": "vitest"
   },
   "devDependencies": {
+    "@types/node": "^24.2.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.2.0"
+    "prettier-plugin-organize-imports": "^4.2.0",
+    "vitest": "^3.2.4"
   }
 }
