--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "type": "module",
   "scripts": {
-    "format": "prettier . --ignore-unknown --write",
-    "test": "vitest"
+    "prepare": "is-ci || husky",
+    "format": "prettier . --ignore-unknown --write --cache --check",
+    "typecheck": "tsc",
+    "test": "vitest",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
     "@types/node": "^24.2.0",
+    "husky": "^9.1.7",
+    "is-ci": "^4.1.0",
+    "lint-staged": "^16.1.4",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
     "vitest": "^3.2.4"
