--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "format": "prettier . --ignore-unknown --write --cache --check",
     "typecheck": "tsc",
     "test": "vitest",
+    "check": "npm run format && npm run typecheck && vitest run",
     "precommit": "lint-staged"
   },
   "devDependencies": {
     "@types/node": "^24.2.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "husky": "^9.1.7",
     "is-ci": "^4.1.0",
     "lint-staged": "^16.1.4",
