--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "precommit": "lint-staged"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250807.0",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^24.2.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
