--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint-staged": "^16.1.4",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
+    "type-fest": "^4.41.0",
     "vitest": "^3.2.4"
   }
 }
