--- a/deno.jsonc
+++ b/deno.jsonc
@@ -28,19 +28,19 @@
     "precommit": "lint-staged"
   },
   "imports": {
-    "lz-string": "npm:lz-string",
-    "search-params": "npm:search-params",
-    "@cloudflare/workers-types": "npm:@cloudflare/workers-types",
-    "@total-typescript/ts-reset": "npm:@total-typescript/ts-reset",
-    "@types/node": "npm:@types/node",
-    "@vitest/coverage-v8": "npm:@vitest/coverage-v8",
-    "@vitest/ui": "npm:@vitest/ui",
-    "husky": "npm:husky",
-    "is-ci": "npm:is-ci",
-    "lint-staged": "npm:lint-staged",
-    "prettier": "npm:prettier",
-    "prettier-plugin-organize-imports": "npm:prettier-plugin-organize-imports",
-    "type-fest": "npm:type-fest",
-    "vitest": "npm:vitest"
+    "lz-string": "npm:lz-string@^1.5.0",
+    "search-params": "npm:search-params@^4.0.1",
+    "@cloudflare/workers-types": "npm:@cloudflare/workers-types@^4.20250807.0",
+    "@total-typescript/ts-reset": "npm:@total-typescript/ts-reset@^0.6.1",
+    "@types/node": "npm:@types/node@^24.2.0",
+    "@vitest/coverage-v8": "npm:@vitest/coverage-v8@^3.2.4",
+    "@vitest/ui": "npm:@vitest/ui@^3.2.4",
+    "husky": "npm:husky@^9.1.7",
+    "is-ci": "npm:is-ci@^4.1.0",
+    "lint-staged": "npm:lint-staged@^16.1.4",
+    "prettier": "npm:prettier@^3.6.2",
+    "prettier-plugin-organize-imports": "npm:prettier-plugin-organize-imports@^4.2.0",
+    "type-fest": "npm:type-fest@^4.41.0",
+    "vitest": "npm:vitest@^3.2.4"
   }
 }
