--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,12 +1,13 @@
 {
   "name": "@atej/utils",
-  "version": "0.11.1",
+  "version": "0.11.2",
   "license": "MIT",
   "exports": {
     ".": "./src/mod.ts",
     "./crypto": "./src/utils/crypto/mod.ts",
     "./cloudflare": "./src/utils/cloudflare/mod.ts",
-    "./razorpay": "./src/utils/razorpay/mod.ts"
+    "./razorpay": "./src/utils/razorpay/mod.ts",
+    "./types": "./src/types/mod.ts"
   },
   "nodeModulesDir": "auto",
   "publish": {
